--- a/WCSTrainer/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -14,7 +14,7 @@
             @if (Model.IsEmailConfirmed) {
                 <div class="form-floating mb-3 input-group">
                     <label asp-for="Email" class="form-label"></label>
-                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." disabled />
+                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." />
                     <div class="input-group-append">
                         <span class="h-100 input-group-text text-success font-weight-bold">✓</span>
                     </div>
@@ -22,7 +22,7 @@
             } else {
                 <div class="form-floating mb-3">
                     <label asp-for="Email" class="form-label"></label>
-                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." disabled />
+                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." />
                     <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                 </div>
             }
