--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -31,7 +31,7 @@
                </table>
                <div class="sorters">
                   <div class="btns">
-                     <a asp-page="Create" class="btn bg-btn btnWhite">Create Group</a>
+                     <a asp-page="Create" class="btn bg-btn btnWhite">Create Location</a>
                   </div>
                </div>
             </div>
