--- a/WCSTrainer/Pages/Skills/Assign.cshtml
+++ b/WCSTrainer/Pages/Skills/Assign.cshtml
@@ -21,7 +21,7 @@
                   <input hidden asp-for="Skill.Description" />
                   <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
                   <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
-                  <div class="form-group">
+@*                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
                            <p class="control-label">Trainers</p>
@@ -48,7 +48,7 @@
                            <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
                         </div>
                      </div>
-                  </div>
+                  </div> *@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
