--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -12,7 +12,7 @@
          <div class="user-form">
             <div class="field-container">
                <form method="post">
-                  <div asp-validation-summary="All" class="text-danger"></div>
+                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                   <input hidden asp-for="Skill.Id" />
                   <div class="form-group">
                      <div class="form">
@@ -50,10 +50,3 @@
       </div>
    </div>
 </div>
-
-
-@section Scripts {
-   @{
-      await Html.RenderPartialAsync("_ValidationScriptsPartial");
-   }
-}
