--- a/WCSTrainer/Pages/Accounts/Edit.cshtml
+++ b/WCSTrainer/Pages/Accounts/Edit.cshtml
@@ -11,7 +11,7 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
-
+                  <input asp-for="UserAccount.UserName" hidden />
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
