--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -16,15 +16,15 @@
             <div class="field-container">
                @if (Model.TrainingOrder.Status == "Awaiting Approval") {
                   <form method="post">
+                  
                      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                      <input asp-for="TrainingOrder.Id" hidden />
 
                      <input asp-for="TrainingOrder.CreateDate" hidden />
-
                      <input asp-for="TrainingOrder.Medium" hidden />
                      <input asp-for="TrainingOrder.Status" hidden />
+               
                      <input asp-for="TrainingOrder.Description" hidden />
-
                      <input asp-for="TrainingOrder.TraineeId" hidden />
                      <input asp-for="TrainingOrder.LocationId" hidden />
 
@@ -79,9 +79,9 @@
                         <div class="form">
                            <div class="labels">
                               <p class="control-label">Begin Date</p>
-                              <span asp-validation-for="BeginDate" class="text-danger"></span>
+                              <span asp-validation-for="TrainingOrder.BeginDate" class="text-danger"></span>
                            </div>
-                           <input type="date" asp-for="BeginDate" class="form-control" />
+                           <input type="date" asp-for="TrainingOrder.BeginDate" class="form-control" />
                         </div>
                      </div>
                      <div class="form-group">
