--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -151,3 +151,8 @@
 	.pill.trainee, .pill.trainees {
 		background-color: var(--red2);
 	}
+
+	.pill.yellow {
+		background-color: var(--yellow1);
+		color: var(--black);
+	}
