--- a/WCSTrainer/Pages/Accounts/Index.cshtml
+++ b/WCSTrainer/Pages/Accounts/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model WCSTrainer.Pages.AccountManager.IndexModel
+
 @{
+
 }
 
 <div class="panel">
@@ -19,8 +21,10 @@
                      <tr class="clickable">
                         <td>@Html.DisplayFor(modelItem => item.UserName)</td>
                         <td>
-                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
-                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnRed">Delete</a>
+                           <a asp-page="./Details" 
+                           asp-route-id="@item.Id" class="btn nbg-btn btnWhite">
+                              View
+                           </a>
                         </td>
                      </tr>
                   }
