--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -21,10 +21,10 @@
                      <input asp-for="TrainingOrder.CreateDate" hidden />
 
                      <input asp-for="TrainingOrder.Medium" hidden />
-                     <input asp-for="TrainingOrder.Status" hidden value="Verified" />
+                     <input asp-for="TrainingOrder.Status" type="hidden" value="Verified" />
                      <input asp-for="TrainingOrder.Duration" hidden />
                      <input asp-for="TrainingOrder.Priority" hidden />
-                     <input asp-for="TrainingOrder.Description" hidden />
+                     <input asp-for="TrainingOrder.Description" type="hidden" />
                      <input asp-for="TrainingOrder.ClosingNotes" hidden />
 
                      <input asp-for="TrainingOrder.TraineeId" hidden />
