--- a/WCSTrainer/Pages/Accounts/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Accounts/Employees/Edit.cshtml
@@ -12,9 +12,9 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
-                  <input hidden asp-for="Employee.Id" />
-                  <input asp-for="Employee.UserAccountId" class="form-control" hidden />
-                  <input asp-for="Employee.Skills" class="form-control" hidden />
+                  <input asp-for="Employee.Id" hidden />
+                  <input asp-for="Employee.UserAccountId" class="form-control" type="hidden" />
+                  <input asp-for="Employee.Skills" class="form-control" type="hidden" />
 
                   <div class="form-group">
                      <div class="form">
