--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -20,13 +20,13 @@
                      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                      <input asp-for="TrainingOrder.Id" hidden />
 
-                     <input asp-for="TrainingOrder.CreateDate" hidden />
-                     <input asp-for="TrainingOrder.Medium" hidden />
-                     <input asp-for="TrainingOrder.Status" hidden />
+                     <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+                     <input asp-for="TrainingOrder.Medium" type="hidden" />
+                     <input asp-for="TrainingOrder.Status" type="hidden" />
                
-                     <input asp-for="TrainingOrder.Description" hidden />
-                     <input asp-for="TrainingOrder.TraineeId" hidden />
-                     <input asp-for="TrainingOrder.LocationId" hidden />
+                     <input asp-for="TrainingOrder.Description" type="hidden"/>
+                     <input asp-for="TrainingOrder.TraineeId" type="hidden" />
+                     <input asp-for="TrainingOrder.LocationId" type="hidden" />
 
                      <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
                      <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
@@ -40,7 +40,7 @@
                            <div class="selections">
                               <ul id="trainerList" class="pill-container"></ul>
                               <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
-                              <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
+                              <input id="trainersInput" asp-for="@Model.SelectedTrainerString" type="hidden" />
                            </div>
                         </div>
                      </div>
@@ -53,7 +53,7 @@
                            <div class="selections">
                               <ul id="groupList" class="pill-container"></ul>
                               <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
-                              <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
+                              <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" type="hidden" />
                            </div>
                         </div>
                      </div>
