--- a/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
+++ b/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
@@ -18,7 +18,7 @@
                </div>
                <div class="text-group">
                   <p class="title">Last Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Employee.LastName)</p>
+                  <p class="info">@Html.DisplayFor(model => model.)</p>
                </div>
                <br />
                <form method="post" class="form-group">
