--- a/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
+++ b/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
@@ -10,15 +10,15 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Html.DisplayFor(model => model.Employee.Id)</p>
+            <p class="title">Employee #@Model.Employee.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">First Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Employee.FirstName)</p>
+                  <p class="info">@Model.Employee.FirstName</p>
                </div>
                <div class="text-group">
                   <p class="title">Last Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.)</p>
+                  <p class="info">@Model.Employee.LastName</p>
                </div>
                <br />
                <form method="post" class="form-group">
