--- a/WCSTrainer/Pages/Locations/Details.cshtml
+++ b/WCSTrainer/Pages/Locations/Details.cshtml
@@ -10,11 +10,11 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Html.DisplayFor(model => model.Location.Id)</p>
+            <p class="title">Employee #@Model.Location.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Location.Name)</p>
+                  <p class="info">@Model.Location.Name</p>
                </div>
             </div>
             <div class="btn-container">
