--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -13,8 +13,7 @@
             <div id="contentToPrint" class="print-block">
                <p class="title">Training Order #@Model.TrainingOrder.Id</p>
                <div class="field-container">
-                  <component 
-                     type="typeof(TrainingDetails)" 
+                  <component type="typeof(TrainingDetails)" 
                      render-mode="WebAssemblyPrerendered" 
                      param-OrderId="@Model.TrainingOrder.Id" 
                   />
