--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -345,7 +345,8 @@
    }
 </script>
 
-
-@{
-   await Html.RenderPartialAsync("_ValidationScriptsPartial");
+@section Scripts {
+   @{
+      await Html.RenderPartialAsync("_ValidationScriptsPartial");
+   }
 }
