--- a/WCSTrainer/Pages/TrainerGroups/Delete.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Delete.cshtml
@@ -10,11 +10,11 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Trainer Group #@Html.DisplayFor(model => model.TrainerGroup.Id)</p>
+            <p class="title">Trainer Group #@Model.TrainerGroup.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.TrainerGroup.Name)</p>
+                  <p class="info">@Model.TrainerGroup.Name</p>
                </div>
                <br />
                <form method="post" class="form-group">
