--- a/WCSTrainer/Pages/TrainerGroups/Details.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Details.cshtml
@@ -10,11 +10,11 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Employee #@Html.DisplayFor(model => model.TrainerGroup.Id)</p>
+            <p class="title">Employee #@Model.TrainerGroup.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.TrainerGroup.Name)</p>
+                  <p class="info">@Model.TrainerGroup.Name</p>
                </div>
                <div class="text-group">
                   <p class="title">Members</p>
@@ -32,4 +32,6 @@
       </div>
    </div>
 </div>
+
+
 
